# form-generator

./: Cargo.toml  README.md  answers.json  config.toml  flake.nix
src/: config.rs  handlers.rs  lib.rs  main.rs
templates/: _layout.css  _layout.html  form.html
