[package]
name = "form-generator"
version = "0.1.2"
edition = "2024"

[dependencies]
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
tower-http = { version = "0.6.6", features = ["cors", "limit"] }
tower_governor = "0.8.0"
anyhow = "1.0.100"
toml = "0.9.8"
chrono = { version = "0.4.42", features = ["serde"] }
askama = "0.14.0"
clap = { version = "4.5.53", features = ["derive"] }
